Fix homepage spacing on xtra large desktop

--- a/src/components/section/index.css
+++ b/src/components/section/index.css
@@ -241,10 +241,6 @@
       margin: 40px auto 0;
       max-width: 600px;
     }
-
-    & .Section-nav {
-
-    }
   }
 
   .Section--02 {
@@ -420,6 +416,11 @@
   .Section--01 {
     & .Section-caption {
       font: 700 60px/70px var(--sans);
+      max-width: 700px;
+    }
+
+    & .Section-nav {
+      margin-top: 10vh;
     }
   }
 
